--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@touchspot/eslint-plugin": "^1.0.0",
 		"@tsconfig/node20": "^20.1.2",
 		"@tsconfig/strictest": "^2.0.3",
+		"@types/node": "^20.11.30",
 		"commitizen": "^4.3.0",
 		"eslint": "^8.57.0",
 		"husky": "^9.0.11",
