--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -224,3 +225,6 @@ dist
 .pnp.*
 
 
+### Customize
+
+.turbo/
