--- a/package.json
+++ b/package.json
@@ -37,38 +37,38 @@
 		"check:unused": "knip",
 		"fix:format": "prettier --write --log-level=warn .",
 		"fix:lint": "eslint --fix .",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"prettier": "./dist/default.js",
 	"dependencies": {
-		"prettier-plugin-packagejson": "^2.4.12",
-		"prettier-plugin-tailwindcss": "^0.5.12",
+		"prettier-plugin-packagejson": "^2.5.2",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"prettier-plugin-toml": "^2.0.1"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.2.1",
-		"@commitlint/config-conventional": "^19.1.0",
-		"@commitlint/config-pnpm-scopes": "^19.1.0",
-		"@commitlint/cz-commitlint": "^19.2.0",
-		"@touchspot/eslint-plugin": "^1.0.0",
-		"@tsconfig/node20": "^20.1.2",
-		"@tsconfig/strictest": "^2.0.3",
-		"@types/node": "^20.11.30",
+		"@commitlint/cli": "^19.5.0",
+		"@commitlint/config-conventional": "^19.5.0",
+		"@commitlint/config-pnpm-scopes": "^19.5.0",
+		"@commitlint/cz-commitlint": "^19.5.0",
+		"@touchspot/eslint-config": "^1.0.4",
+		"@tsconfig/node20": "^20.1.4",
+		"@tsconfig/strictest": "^2.0.5",
+		"@types/node": "^20.16.5",
 		"commitizen": "^4.3.0",
-		"eslint": "^8.57.0",
-		"husky": "^9.0.11",
-		"inquirer": "^9.2.16",
-		"knip": "^5.1.5",
-		"lint-staged": "^15.2.2",
-		"pkgroll": "^2.0.2",
-		"prettier": "^3.2.5",
-		"turbo": "^1.12.5",
-		"typescript": "^5.4.2"
+		"eslint": "^9.10.0",
+		"husky": "^9.1.6",
+		"inquirer": "^9.3.6",
+		"knip": "^5.30.2",
+		"lint-staged": "^15.2.10",
+		"pkgroll": "^2.5.0",
+		"prettier": "^3.3.3",
+		"turbo": "^2.1.2",
+		"typescript": "^5.6.2"
 	},
 	"peerDependencies": {
 		"prettier": "^3"
 	},
-	"packageManager": "pnpm@8.15.5",
+	"packageManager": "pnpm@9.10.0",
 	"publishConfig": {
 		"access": "public"
 	}
