--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"globalDependencies": ["*-lock.*"],
-	"pipeline": {
+	"tasks": {
 		"build": {
 			"inputs": ["src/**/*.ts", "package.json", "tsconfig.json"],
 			"outputs": ["dist/**"]
