--- a/.github/actions/setup-toolchain/action.yaml
+++ b/.github/actions/setup-toolchain/action.yaml
@@ -16,7 +16,7 @@ runs:
       with:
         node-version: ${{ steps.detect-toolchain-versions.outputs.node }}
     - shell: bash
-      run: corepack enable
+      run: npm install --global --force corepack && corepack enable
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ steps.detect-toolchain-versions.outputs.node }}
