--- a/mise.toml
+++ b/mise.toml
@@ -1,7 +1,7 @@
 min_version = "2025.2.3"
 
 [tools]
-node = "22.13.1"
+node = "22.17.0"
 
 [env]
 _.path = ["./node_modules/.bin"]
@@ -10,10 +10,10 @@ _.path = ["./node_modules/.bin"]
 run = ["mise install", "corepack enable", "pnpm install --frozen-lockfile"]
 
 [tasks.build]
-run = "turbo run build --no-daemon"
+run = "turbo run build"
 
 [tasks.check]
-run = "turbo run check:format check:lint check:type check:unused --no-daemon --continue"
+run = "turbo run check:format check:lint check:type check:unused --continue"
 
 [tasks.fix]
-run = "turbo run fix:lint fix:format --no-daemon"
+run = "turbo run fix:lint fix:format"
