--- a/package.json
+++ b/package.json
@@ -14,17 +14,9 @@
 	},
 	"type": "module",
 	"exports": {
-		".": {
-			"import": "./dist/default.js",
-			"require": "./dist/default.cjs"
-		},
-		"./tailwindcss": {
-			"import": "./dist/tailwindcss.js",
-			"require": "./dist/tailwindcss.cjs"
-		}
+		".": "./dist/default.js",
+		"./tailwindcss": "./dist/tailwindcss.js"
 	},
-	"main": "./dist/default.cjs",
-	"module": "./dist/default.js",
 	"files": [
 		"dist",
 		"package.json"
@@ -41,34 +33,34 @@
 	},
 	"prettier": "./dist/default.js",
 	"dependencies": {
-		"prettier-plugin-packagejson": "^2.5.8",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"prettier-plugin-toml": "^2.0.1"
+		"prettier-plugin-packagejson": "^2.5.18",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"prettier-plugin-toml": "^2.0.5"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.7.1",
-		"@commitlint/config-conventional": "^19.7.1",
-		"@commitlint/config-pnpm-scopes": "^19.5.0",
-		"@commitlint/cz-commitlint": "^19.6.1",
-		"@touchspot/eslint-config": "^1.5.6",
-		"@tsconfig/node20": "^20.1.4",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@commitlint/config-pnpm-scopes": "^19.8.1",
+		"@commitlint/cz-commitlint": "^19.8.1",
+		"@touchspot/eslint-config": "^1.7.1",
+		"@tsconfig/node22": "^22.0.2",
 		"@tsconfig/strictest": "^2.0.5",
-		"@types/node": "^22.13.1",
+		"@types/node": "^22.16.0",
 		"commitizen": "^4.3.1",
-		"eslint": "^9.20.0",
+		"eslint": "^9.30.1",
 		"husky": "^9.1.7",
-		"inquirer": "^9.3.6",
-		"knip": "^5.43.6",
-		"lint-staged": "^15.4.3",
-		"pkgroll": "^2.8.2",
-		"prettier": "^3.5.0",
-		"turbo": "^2.4.0",
-		"typescript": "^5.7.3"
+		"inquirer": "^9.3.7",
+		"knip": "^5.61.3",
+		"lint-staged": "^16.1.2",
+		"pkgroll": "^2.14.0",
+		"prettier": "^3.6.2",
+		"turbo": "^2.5.4",
+		"typescript": "^5.8.3"
 	},
 	"peerDependencies": {
 		"prettier": "^3.5.0"
 	},
-	"packageManager": "pnpm@10.2.1",
+	"packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184",
 	"publishConfig": {
 		"access": "public"
 	}
