--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,4 +18,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-toolchain
       - run: pnpm install --frozen-lockfile
-      - run: mise run check
+      - run: pnpm exec turbo run check:format check:lint check:type check:unused --continue
