--- a/package.json
+++ b/package.json
@@ -41,15 +41,14 @@
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@commitlint/config-pnpm-scopes": "^19.8.1",
-		"@commitlint/cz-commitlint": "^19.8.1",
 		"@touchspot/eslint-config": "^1.7.1",
 		"@tsconfig/node22": "^22.0.2",
 		"@tsconfig/strictest": "^2.0.5",
 		"@types/node": "^22.16.0",
 		"commitizen": "^4.3.1",
+		"cz-git": "^1.12.0",
 		"eslint": "^9.30.1",
 		"husky": "^9.1.7",
-		"inquirer": "^9.3.7",
 		"knip": "^5.61.3",
 		"lint-staged": "^16.1.2",
 		"pkgroll": "^2.14.0",
