chore: self-reference source config instead of compiled output
Update package.json prettier field to use ./src/default.ts instead of
./dist/default.js to ensure development tooling uses the source
configuration directly.

--- a/mise.toml
+++ b/mise.toml
@@ -2,6 +2,8 @@ min_version = "2025.2.3"
 
 [tools]
 node = "22.20.0"
+claude = "2.0.1"
+"npm:ccusage" = "17.1.1"
 
 [env]
 _.path = ["./node_modules/.bin"]
