--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"@tsconfig/strictest/tsconfig.json"
 	],
 	"compilerOptions": {
-		"noEmit": true
+		"outDir": "dist",
+		"declaration": true
 	},
 	"include": ["src"]
 }
